--- a/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
+++ b/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
@@ -58,8 +58,9 @@
           </div>
         </label>
       </div>
-      <hr>
-<!--      <button type="submit" mat-raised-button color="primary" (click)="saveVideo()">Save</button>-->
+      <div>
+        <button type="submit" mat-raised-button color="primary" (click)="saveVideo()">Save</button>
+      </div>
     </form>
   </div>
   <div fxFlex="30%">
