--- a/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
+++ b/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
@@ -2,7 +2,7 @@
   <div fxFlex="20%"></div>
   <div fxFlex="30%">
     <div class="mat-title">Add Video Metadata</div>
-    <form>
+    <form [formGroup]="saveVideoDetailsForm">
       <div>
         <mat-form-field appearance="fill">
           <mat-label>Title</mat-label>
@@ -27,7 +27,7 @@
       <div>
         <mat-form-field class="example-chip-list">
           <mat-label>Tags</mat-label>
-          <mat-chip-list #chipList aria-label="Fruit selection">
+          <mat-chip-list #chipList aria-label="Tag selection">
             <mat-chip *ngFor="let tag of tags" [selectable]="selectable"
                       [removable]="removable" (removed)="remove(tag)">
               {{tag}}
