--- a/frontend/youtube-clone-ui/src/app/sidebar/sidebar.component.html
+++ b/frontend/youtube-clone-ui/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav mode="side" opened>
   <mat-nav-list role="list">
-    <mat-list-item role="listitem" routerLink="">
+    <mat-list-item role="listitem" routerLink="/featured">
       <mat-icon mat-list-icon>home</mat-icon>
       <p matLine>Home</p>
     </mat-list-item>
