--- a/frontend/youtube-clone-ui/src/app/video-card/video-card.component.html
+++ b/frontend/youtube-clone-ui/src/app/video-card/video-card.component.html
@@ -1,9 +1,10 @@
 <mat-card class="example-card">
-  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+  <img mat-card-image [src]="video.thumbnailUrl" alt="Thumbnail">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Shiba Inu</mat-card-title>
-    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    <mat-card-title>{{video.title}}</mat-card-title>
+    <mat-card-subtitle>subtitle</mat-card-subtitle>
+    <mat-card-subtitle>1M views</mat-card-subtitle>
   </mat-card-header>
 </mat-card>
 
