Change video dto interface

--- a/frontend/youtube-clone-ui/src/app/video-detail/video-detail.component.html
+++ b/frontend/youtube-clone-ui/src/app/video-detail/video-detail.component.html
@@ -4,7 +4,9 @@
     <div class="mat-title">{{videoTitle}}</div>
     <div fxLayout="row">
       <div fxFlex="50%">
-        <div>Date: ____</div>
+        <span>{{viewCount}} Views</span>
+        <span class="separator"></span>
+        <span>Date: ____</span>
         <span>{{videoDescription}}</span>
       </div>
       <div fxFlex="50%">
