--- a/frontend/youtube-clone-ui/src/app/video-detail/video-detail.component.html
+++ b/frontend/youtube-clone-ui/src/app/video-detail/video-detail.component.html
@@ -1,21 +1,46 @@
 <div fxLayout="row">
   <div fxFlex="65%" class="video-detail">
-    <app-video-player *ngIf="videoAvailable" [videoUrl]="videoUrl"></app-video-player>
-    <div class="mat-title">{{videoTitle}}</div>
-    <div fxLayout="row">
-      <div fxFlex="50%">
-        <span>{{viewCount}} Views</span>
-        <span class="separator"></span>
-        <span>Date: ____</span>
-        <span>{{videoDescription}}</span>
+    <div fxLayout="column" fxLayoutGap="8px">
+      <app-video-player *ngIf="videoAvailable" [videoUrl]="videoUrl"></app-video-player>
+      <div class="mat-title">{{videoTitle}}</div>
+      <div fxLayout="row">
+        <div fxFlex="50%">
+          <span class="view-count">{{viewCount}}</span>
+          <span class="dot"></span>
+          <span class="video-upload-date">Apr 13, 2021</span>
+        </div>
+        <div fxFlex="50%" fxLayoutAlign="end">
+          <span class="like-dislike-section">
+              <button mat-icon-button class="thumbs-up" (click)="likeVideo()">
+                <mat-icon>thumb_up_off_alt</mat-icon>
+                {{likeCount}}
+              </button>
+              <button mat-icon-button class="thumbs-down" (click)="disLikeVideo()">
+                <mat-icon>thumb_down_off_alt</mat-icon>
+                {{dislikeCount}}
+              </button>
+          </span>
+        </div>
       </div>
-      <div fxFlex="50%">
-
-      </div>
+      <mat-divider></mat-divider>
+      <mat-card-header>
+        <mat-card-title>Mayer Jeon</mat-card-title>
+        <mat-card-subtitle class="subtitles">4.2K Subscribers</mat-card-subtitle>
+        <button class="subscribe-button" mat-raised-button color="warn">SUBSCRIBE</button>
+        <button class="subscribe-button-clicked" mat-raised-button color="accent">
+          SUBSCRIBED
+        </button>
+      </mat-card-header>
+      <div>{{videoDescription}}</div>
+      <mat-divider></mat-divider>
+      <mat-chip-list>
+        <mat-chip>Spring Boot</mat-chip>
+        <mat-chip>Angular</mat-chip>
+      </mat-chip-list>
+      <mat-divider></mat-divider>
     </div>
   </div>
   <div fxFlex="5%"></div>
-  <div fxFlex="30%">
-    Suggestions Bar
+  <div fxFlex="30%" class="suggestion-bar">
   </div>
 </div>
