Subscribe/UnSubscribe to user

--- a/frontend/youtube-clone-ui/src/app/video-detail/video-detail.component.html
+++ b/frontend/youtube-clone-ui/src/app/video-detail/video-detail.component.html
@@ -26,9 +26,9 @@
       <mat-card-header>
         <mat-card-title>Mayer Jeon</mat-card-title>
         <mat-card-subtitle class="subtitles">4.2K Subscribers</mat-card-subtitle>
-        <button class="subscribe-button" mat-raised-button color="warn">SUBSCRIBE</button>
-        <button class="subscribe-button-clicked" mat-raised-button color="accent">
-          SUBSCRIBED
+        <button *ngIf="showSubscribeButton" class="subscribe-button" mat-raised-button color="warn" (click)="subscribeToUser()">SUBSCRIBE</button>
+        <button *ngIf="showUnSubscribeButton" class="subscribe-button-clicked" mat-raised-button color="accent" (click)="unSubscribeToUser()">
+          UNSUBSCRIBE
         </button>
       </mat-card-header>
       <div>{{videoDescription}}</div>
