--- a/frontend/youtube-clone-ui/src/app/video-detail/video-detail.component.html
+++ b/frontend/youtube-clone-ui/src/app/video-detail/video-detail.component.html
@@ -38,6 +38,7 @@
         <mat-chip>Angular</mat-chip>
       </mat-chip-list>
       <mat-divider></mat-divider>
+      <app-comments [videoId]="videoId"></app-comments>
     </div>
   </div>
   <div fxFlex="5%"></div>
